--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,27 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: oklch(98.51% 0 0);
+  --foreground: oklch(0% 0 0);
+  --accent: oklch(49.55% 0.237 301.92);
+  --focus-color: oklch(75.76% 0.159 55.93);
+  --card-bg: oklch(96.74% 0.001 286.38);
+  --message-bg: oklch(91.97% 0.004 286.32);
+  --shadow: oklch(50.71% 0.017 285.77 / 20%) 0px 7px 29px 0px;
+  --input-bg: oklch(98.51% 0 0);
+  --button-text: oklch(100% 0 0);
+  --disabled: oklch(91.97% 0.004 286.32);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+[data-theme="dark"] {
+  --background: oklch(27.39% 0.005 286.03);
+  --foreground: oklch(100% 0 0);
+  --accent: oklch(75.76% 0.159 55.93);
+  --focus-color: oklch(75.76% 0.159 55.93);
+  --card-bg: oklch(14.08% 0.004 285.82);
+  --message-bg: oklch(21.03% 0.006 285.89);
+  --shadow: oklch(14.52% 0.002 286.13 / 20%) 0px 7px 29px 0px;
+  --input-bg: oklch(27.39% 0.005 286.03);
+  --button-text: oklch(100% 0 0);
+  --disabled: oklch(21.03% 0.006 285.89);
 }
 
 * {
@@ -30,13 +30,38 @@ body {
   margin: 0;
 }
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  background-color: var(--background);
+  color: var(--foreground);
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  min-width: 320px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
